WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239955
[WebGPU] Device creation should not always fail if supported features are requested
https://bugs.webkit.org/show_bug.cgi?id=239955
Summary
[WebGPU] Device creation should not always fail if supported features are req...
Myles C. Maxfield
Reported
2022-05-01 23:07:20 PDT
[WebGPU] Device creation should not always fail if supported features are requested
Attachments
Patch
(3.08 KB, patch)
2022-05-01 23:08 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-05-01 23:08:19 PDT
Created
attachment 458663
[details]
Patch
EWS
Comment 2
2022-05-03 00:48:49 PDT
Committed
r293718
(
250207@main
): <
https://commits.webkit.org/250207@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458663
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-05-03 00:49:13 PDT
<
rdar://problem/92654931
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug