[WebGPU] Device creation should not always fail if supported features are requested https://bugs.webkit.org/show_bug.cgi?id=239955

Reviewed by Kimmo Kinnunen.

Somehow a block of code was remaining from before we implemented optional features.

Test: webgpu/api/validation/createTexture

* WebGPU/Adapter.mm:
(WebGPU::Adapter::requestDevice):
* WebGPU/Instance.mm:
(WebGPU::Instance::requestAdapter):

Canonical link: https://commits.webkit.org/250207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293718 268f45cc-cd09-0410-ab3c-d52691b4dbfc